--- a/style.css
+++ b/style.css
@@ -35,10 +35,15 @@ button {
     height: 11vh;
     margin: 20px auto;
     border-radius: 7px;
-    border: 2px solid #ff0000;
+    border: 2px solid #8d8c8c;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 25px;
+}
+H6{
+    font: 500 1.1rem Verdana;
+    color: #fff;
+   padding: 10px 60px; 
 }
